@@ -1,3 +1,7 @@
+2008-03-21  Ian Lance Taylor  <iant@google.com>
+
+	* filenames.h: Add extern "C" when compiled with C++.
+
 2008-02-15  Alan Modra  <amodra@bigpond.net.au>
 
 	* bfdlink.h (struct bfd_link_hash_table): Delete creator field.
